fixed collapse logic

--- a/app/globals.css
+++ b/app/globals.css
@@ -52,7 +52,7 @@
     --accent-foreground: 60 9.1% 97.8%;
     --destructive: 0 52.8% 25.6%;
     --destructive-foreground: 60 9.1% 97.8%;
-    --border: 12 6.5% 25.1%;
+    --border: 12 6.5% 33.3%;
     --input: 12 6.5% 25.1%;
     --ring: 24 5.7% 20.9%;
 
